examples/errors/absolute_import.aaa
from "/foo" import bar

fn main { nop }
